--- a/configuration.properties
+++ b/configuration.properties
@@ -5,7 +5,7 @@ facebookUrl=https://www.facebook.com
 facebookWronName=asadjkjkdaskas@hotmail.com
 facebookWrongPassword=12QWEDFCV!
 
-linkedinUrl=https://www.linkedin.com/login/tr?fromSignIn=true&trk=guest_homepage-basic_nav-header-signin
+linkedinUrl=https://www.linkedin.com/
 linkedinKullaniciadi=seckininadresi@gmail.com
 linkedinSifre=3LinkediN.7
 linkedinIlKullaniciId=ember1952
